fix z-index

--- a/scss/_cartItem.scss
+++ b/scss/_cartItem.scss
@@ -92,7 +92,7 @@
   }
 }
 
-@media screen and (max-width: 1600px) {
+@media screen and (max-width: 1900px) {
   .cartItem {
     gap: 30px;
 
@@ -101,9 +101,19 @@
     }
 
     &__img {
-      width: 90px;
-      height: 90px;
+      width: 80px;
+      height: 80px;
       padding: 5px;
+    }
+
+    &__name {
+      font-size: 14px;
+      line-height: 15px;
+    }
+
+    &__price {
+      font-size: 20px;
+      line-height: 22px;
     }
 
     &__info {
@@ -111,49 +121,113 @@
     }
 
     &__btn {
-      width: 24px;
-      height: 21px;
+      width: 20px;
+      height: 20px;
     }
 
     &__availability {
-      font-size: 14px;
+      font-size: 13px;
+      line-height: 15px;
     }
 
     &__art {
-      font-size: 14px;
+      font-size: 13px;
+      line-height: 15px;
     }
   }
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1400px) {
   .cartItem {
-    gap: 20px;
+    gap: 24px;
 
-    &__right {
-      flex-direction: column;
-      gap: 20px;
+    &__product {
+      gap: 8px;
     }
 
-    &__info {
-      gap: 6px;
-      flex-direction: column;
-      align-items: start;
+    &__description {
+      gap: 8px;
     }
 
-    &__btn {
-      width: 18px;
-      height: 16px;
+    &__img {
+      width: 60px;
+      height: 60px;
     }
 
-    &__availability {
-      font-size: 14px;
-    }
-
-    &__art {
-      font-size: 14px;
+    &__name {
+      font-size: 9px;
+      line-height: 10px;
     }
 
     &__price {
+      font-size: 15px;
+      line-height: 16px;
+    }
+
+    &__info {
+      gap: 5px;
+    }
+
+    &__btn {
+      width: 14px;
+      height: 14px;
+    }
+
+    &__availability {
+      font-size: 9px;
+      line-height: 10px;
+    }
+
+    &__art {
+      font-size: 9px;
+      line-height: 10px;
+    }
+
+    &__counter {
+      .counter {
+        height: 25px;
+
+        &__btn {
+          width: 30px;
+          font-size: 12px;
+          line-height: 14px;
+          border: 1px solid var(--blue-color);
+          padding: 0 10px;
+          border-radius: 10px 0 0 10px;
+
+          &.right {
+            border-radius: 0 10px 10px 0;
+          }
+        }
+
+        &__input {
+          width: 45px;
+          border-top: 1px solid var(--blue-color);
+          border-bottom: 1px solid var(--blue-color);
+        }
+      }
+    }
+  }
+
+}
+
+@media screen and (max-width: 1200px) {
+  .cartItem {
+    flex-wrap: wrap;
+    justify-content: end;
+    row-gap: 0px;
+    column-gap: 25px;
+
+    &__product {
+      min-width: 100%;
+    }
+
+    &__price {
+      flex: 0;
+      min-width: fit-content;
+    }
+
+    &__counter {
       flex: 0;
       min-width: fit-content;
     }
@@ -162,33 +236,6 @@
 
 @media screen and (max-width: 1000px) {
   .cartItem {
-    row-gap: 0;
-    column-gap: 25px;
-    flex-wrap: wrap;
-    justify-content: end;
-
-    &__counter {
-      flex: 0;
-      min-width: fit-content;
-
-      .counter {
-        height: 25px;
-
-        &__btn {
-          width: 32px;
-        }
-
-        &__input {
-          width: 47px;
-          font-size: 14px;
-        }
-      }
-    }
-
-    &__product {
-      min-width: 100%;
-    }
-
     &__info {
       gap: 15px;
       flex-direction: row;
@@ -203,8 +250,6 @@
 
 @media screen and (max-width: 850px) {
   .cartItem {
-    gap: 10px;
-
     &__info {
       gap: 0;
       flex-direction: column;
