--- a/scss/index.scss
+++ b/scss/index.scss
@@ -23,10 +23,10 @@ body {
 
   --desktop-width: 1560px;
 
-  --header-index: 2;
-  --dropdown-index: 3;
-  --overlay-index: 4;
-  --modal-index: 5;
+  --header-index: 3;
+  --dropdown-index: 4;
+  --overlay-index: 5;
+  --modal-index: 6;
 
   --radius-s: 10px;
   --radius-m: 15px;
@@ -185,7 +185,7 @@ a:hover {
     --box-shadow: 0px 2px 10px 0px #0000001A;
     --radius-s: 8px;
     --radius-m: 12px;
-    --radius-l: 16px;
+    --radius-l: 12px;
   }
   .btn {
     font-size: 13px;
